# sarcastik

./: LICENSE  README.md  pyproject.toml  sarcastik.sh
sarcastik/: sarcastik.py
